* main.css: fix header alignment issues
I hope this is enough...

--- a/main.css
+++ b/main.css
@@ -20,6 +20,8 @@ body {
 }
 
 div.header {
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 120px;
 }
@@ -31,13 +33,16 @@ div.header {
 }
 
 #sitetitle {
-  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
   margin-right: 10px;
   margin-top: 5px;
 }
 
 #pagetitle {
-  padding-left: 10px;
+  float: left
+  padding-left: 30px;
   overflow: hidden;
   padding-top: 163px;
   margin-top: -50pt;
